+ Added proper composite voting support based on the existing extra votes options, average rating will be automatically calculated based on the voting sub-cases (quality, speed, accuracy, etc), user can change his/her votes.

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1779,11 +1779,6 @@ FLEXI_NO_DISABLE_WARNING="No, disable warning"
 FLEXI_SCHEDULED_FOR_PUBLICATION="Scheduled for publication"
 FLEXI_PUBLICATION_EXPIRED="Publication expired"
 
-FLEXI_FIELD_VOTE_EXTRA="Extra Voting Characteristics"
-FLEXI_FIELD_VOTE_EXTRA_DESC="You can define extra voting characteristics like e.g. Quality, Speed, Accuracy, etc ... <b>Write like</b>:<br/> 1##Quality%% 2##Speed%% 3##Accuracy%% 4##Appearance%% ... <br/><b>NOTE 1</b>:<br/> The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
-FLEXI_FIELD_VOTE_MAIN_LABEL="Main Vote Label when using extra voting"
-FLEXI_FIELD_VOTE_MAIN_LABEL_DESC="When using multiple voting types, it is recommended that you set a label (language string) for the main vote"
-
 FLEXI_YES_AS_TIP="Yes, as popup tooltip"
 FLEXI_YES_AS_INLINE="Yes, as inline text"
 FLEXI_YES_CUSTOM_TEXT="Yes, custom text"
@@ -1855,11 +1850,24 @@ FLEXI_CATEGORY_ORDER_DESC="Ordering of the Category List, available options depe
 FLEXI_SUBCATEGORY_ORDER="Subcategory List Order"
 FLEXI_SUBCATEGORY_ORDER_DESC="Order that the items will be displayed in"
 
-FLEXI_EXTRA_VOTES="Extra Voting"
-FLEXI_ENABLE_VOTE_EXTRA="Enable"
-FLEXI_ENABLE_VOTE_EXTRA_DESC="Turn on/off the display of extra voting types"
-FLEXI_OVERRIDE_VOTE_EXTRA="Override"
-FLEXI_OVERRIDE_VOTE_EXTRA_DESC="Override the --voting field-- configuration of extra voting types"
+FLEXI_FIELD_VOTE_RESOLUTION_N_DISPLAY="Resolution and custom display"
+FLEXI_FIELD_VOTE_RESOLUTION_N_DISPLAY_DESC="Define voting resultion (e.g. half star), number of stars, custom image, custom average label, etc"
+
+FLEXI_FIELD_VOTE_AVERAGE_RATING="Average rating"
+FLEXI_FIELD_VOTE_AVERAGE_RATING_DESC="Customize the display of average rating <br/><br/>NOTE: this is also used with composite voting ON or OFF"
+FLEXI_FIELD_VOTE_AVERAGE_RATING="Average rating"
+FLEXI_FIELD_VOTE_AVERAGE_RATING_DESC="Customize the display of average rating <br/><br/>NOTE: this is also used with composite voting ON or OFF"
+FLEXI_FIELD_VOTE_AVERAGE_RATING_LABEL="Label"
+FLEXI_FIELD_VOTE_AVERAGE_RATING_LABEL_DESC="The label of average rating"
+
+FLEXI_FIELD_VOTE_COMPOSITE_VOTING="Composite voting"
+FLEXI_FIELD_VOTE_COMPOSITE_VOTING_DESC="Display custom voting characteric e.g. quality, accuracy, speed) and then automatically calculate a voting average"
+FLEXI_FIELD_VOTE_ENABLE_COMPOSITE="Enable"
+FLEXI_FIELD_VOTE_ENABLE_COMPOSITE_DESC="Turn on/off the display of partial voting characteric, like quality, performace, accuracy, etc"
+FLEXI_FIELD_VOTE_CHARACTERISTICS="Voting characteristics"
+FLEXI_FIELD_VOTE_CHARACTERISTICS_DESC="Here you can define the voting characteristics like e.g. Quality, Speed, Accuracy, etc ... <b>Write like</b>:<br/> 1##Quality##Desciption%% 2##Speed##Desciption%% 3##Accuracy##Desciption%% 4##Appearance##Desciption%% ... <br/><b>NOTE 1</b>:<br/> The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
+FLEXI_FIELD_VOTE_CHARACTERISTIC="Voting characteristic"
+FLEXI_FIELD_VOTE_CHARACTERISTIC_DESC="Configuration used for each voting characteristics"
 
 FLEXI_FIELD_FIELDLABEL_DESC="Field label is displayed in <br/><br/><b>(a)</b> item edit form <br/><br/><b>(b)</b> optionally when displaying the field value in the frontend"
 FLEXI_FIELD_FIELDNAME_DESC="Field name is used in custom item/category/etc template layouts to refer to the field"
@@ -2137,10 +2145,8 @@ FLEXI_USER_CAN_SELECT="User can select"
 FLEXI_ALLOW_SELECTION="Allow selection"
 
 ; Enable/Disable vote counter
-FLEXI_FIELD_VOTE_SHOW_COUNTER="Show number of votes"
-FLEXI_FIELD_VOTE_SHOW_COUNTER_DESC="Display number of votes (a vote counter) next to the voting images"
-FLEXI_FIELD_VOTE_DISABLE_IN_EXTRA_VOTES="Disable for exta votes"
-FLEXI_FIELD_VOTE_DISABLE_IN_MAIN_VOTE="Disable for main vote"
+FLEXI_FIELD_VOTE_SHOW_COUNTER="Show vote counter"
+FLEXI_FIELD_VOTE_SHOW_COUNTER_DESC="Display total number of votes"
 
 ; Notes for date's timezone
 FLEXI_DATES_IN_SITE_TIMEZONE_NOTE="<b>NOTE</b>: dates are converted and displayed in %s <b>site's default timezone</b>: %s"
@@ -2571,7 +2577,7 @@ FLEXI_PROPERTY_NOT_SUPPORTED="Property not supported"
 FLEXI_REBUILD_SEARCH_INDEX="Rebuild Search Index"
 
 ; field value replacements enhancements (fields configuration)
-FLEXI_FIELD_CONTENT_PLUGINS="Content Plugins <small><br/>-- You need this for <u>description</u> field, <br/>-- for other fields enable only if needed</small>"
+FLEXI_FIELD_CONTENT_PLUGINS="Content Plugins <br/>-- You need this for <u>description</u> field, <br/>-- for other fields enable only if needed"
 FLEXI_FIELD_CONTENT_PLUGINS_DESC="Normally you should trigger all (or most) content plugins in item's <b>description field</b> and only one or a few content plugins, in fields that really contain content plugin code"
 FLEXI_PREFIX_SUFFIX_SEPARATOR_LABEL_DESC_FIELD="You can use these to create a custom layout by e.g. to create an ordered list, enter: <br/> Open Field text: <<b>ol</b>> <br/> Prefix Value Text: <<b>li</b>> <br/> Suffix Value Text: <<b>/li</b>> <br/> Close Field text: <<b>/ol</b>> <br/><br/><b>NOTE</b>: you can use other fields values by entering replacements like: <br/> {{item->core_property}} <br/> {{fieldname##nn}} <br/> {{fieldname##nn##propertyname}} <br/><br/> -- e.g for core ITEM properties (created,createdby,title,alias, etc) : <br/> {{item->title}} and {{item->created}}<br/><br/> -- e.g for single property CUSTOM fields (text,date, etc) : <br/> {{field19##0}} <br/><br/> -- e.g. for multi-property CUSTOM fields (weblink,email, etc) :<br/> {{field19##0##link}} and {{field19##0##addr}} <br/><br/> -- e.g. for indexable field that have value (=index) and label (select,selectmultiple,radio,checkbox,radioimage,checkboximage, etc) :<br/> {{field21##0##_value_}} or {{field21##0##_text_}} or {{field21##0##_image_}}"
 FLEXI_FIELDS_LIST_OR_HTML_WITH_REPLACEMENTS="Fields List <br/><small>or HTML with replacements</small>"
@@ -2951,8 +2957,8 @@ FLEXI_FIELD_VOTE_RATING_RESOLUTION_DESC="This is to be used while building new s
 FLEXI_FIELD_VOTE_RATING_STARS="Rating Stars <br/><small>resolution &gt;= stars</small>"
 FLEXI_FIELD_VOTE_RATING_STARS_DESC="The number of displayed stars, Joomla's built-in is also 5. <br/><br/><b>NOTE:</b> Must be: resolution &gt;= stars <br/><br/> <b>EXAMPLES:</b><br/>-- 10 stars with half star voting, set Resolution: 20, Stars 10 <br/>-- 5 stars with quarter star voting, set Resolution: 20, Stars: 5 <br/>-- 10 stars with one star voting, set Resolution: 10, Stars: 10"
 
-FLEXI_FIELD_VOTE_SUBMISSION="Vote Submission"
-FLEXI_FIELD_VOTE_SUBMISSION_DESC="Configuration that includes: who is allowed to submit votes, message for no authorized users, etc"
+FLEXI_FIELD_VOTE_PERMISSIONS="Permission"
+FLEXI_FIELD_VOTE_PERMISSIONS_DESC="You can configure who is allowed to submit votes, message for non-authorized users, etc"
 FLEXI_FIELD_VOTE_SUBMIT_ACCESS="Submit Access"
 FLEXI_FIELD_VOTE_SUBMIT_ACCESS_DESC="User Group assigned this access level will be able to vote. <br/><br/> - e.g <b>create an access level 'Content Voting'</b> and assign it to the Usergroups that you need <br/><br/><b>NOTE:</b> You only need to assign it to the parent UserGroup e.g. if you assign this Access Level to usergroup 'Registered' then ALL usergroups being children of it will have it ..."
 
