--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -31,7 +31,6 @@ FLEXI_POOR="Poor"
 FLEXI_REGULAR="Regular"
 FLEXI_REMOVE_FAVOURITE="Remove from your favourites"
 FLEXI_THANK_YOU_FOR_VOTING="Thank you for voting"
-FLEXI_YOUR_OLD_VOTING_WAS_CHANGED="Your old voting was changed"
 FLEXI_TO_WRITE="Draft"
 FLEXI_UNPUBLISHED="Unpublished"
 FLEXI_USERS="users"
@@ -502,3 +501,14 @@ FLEXI_PAGETITLE_SEPARATOR="%1$s - %2$s"
 ; v3.0 Favoured improvements
 FLEXI_FAVS_YOU_HAVE_SUBSCRIBED="You have subscribed"
 FLEXI_FAVS_CLICK_TO_SUBSCRIBE="Click to subscribe"
+
+; v3.0 Voting improvements
+FLEXI_VOTING_YOUR_RATING="Your rating"
+FLEXI_VOTING_PLEASE_COMPLETE_VOTING="You have completed: %s out of %s. Complete all to make you voting permanent"
+FLEXI_VOTING_YOUR_OLD_RATING_WAS_CHANGED="Your old rating was changed"
+FLEXI_VOTING_YOUR_OLD_AVERAGE_RATING_WAS_UPDATED="Your old average rating was updated"
+FLEXI_VOTING_YOUR_AVERAGE_RATING_STORED="Your average rating was stored"
+FLEXI_VOTING_AVERAGE_RATING_UPDATED="Updated"
+FLEXI_VOTING_AVERAGE_RATING_SUBMITTED="Submitted"
+FLEXI_VOTING_AVERAGE_RATING_CALCULATED_AUTOMATICALLY="Voting average will be calculated out of the voting characteristics, please complete them ALL"
+FLEXI_VOTING_COMPOSITE_VOTING_IS_DISABLED="Composite voting characteristics are disabled"
