# Missed some changes in last commit, also cleaned 1 more notice, minor CSS changes

--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -502,3 +502,14 @@ FLEXI_PAGETITLE_SEPARATOR="%1$s - %2$s"
 FLEXI_FAVS_YOU_HAVE_SUBSCRIBED="You have subscribed"
 FLEXI_FAVS_CLICK_TO_SUBSCRIBE="Click to subscribe"
 
+; v3.0 Voting improvements
+FLEXI_VOTE_AVERAGE_RATING="Average rating"
+FLEXI_VOTE_YOUR_RATING="Your rating"
+FLEXI_VOTE_PLEASE_COMPLETE_VOTING="You have completed: %s out of %s. Complete all to make you voting permanent"
+FLEXI_VOTE_YOUR_OLD_RATING_WAS_CHANGED="Your old rating was changed"
+FLEXI_VOTE_YOUR_OLD_AVERAGE_RATING_WAS_UPDATED="Your old average rating was updated"
+FLEXI_VOTE_YOUR_AVERAGE_RATING_STORED="Your average rating was stored"
+FLEXI_VOTE_AVERAGE_RATING_UPDATED="Updated"
+FLEXI_VOTE_AVERAGE_RATING_SUBMITTED="Submitted"
+FLEXI_VOTE_AVERAGE_RATING_CALCULATED_AUTOMATICALLY="Voting average will be calculated out of the voting characteristics, please complete them ALL"
+FLEXI_VOTE_COMPOSITE_VOTING_IS_DISABLED="Composite voting characteristics are disabled"
