# Small changes to the CSS and new to the star image for voting, added some missing language string, and added new voting parameters to type configuration so that they are overridable per type

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1850,25 +1850,6 @@ FLEXI_CATEGORY_ORDER_DESC="Ordering of the Category List, available options depe
 FLEXI_SUBCATEGORY_ORDER="Subcategory List Order"
 FLEXI_SUBCATEGORY_ORDER_DESC="Order that the items will be displayed in"
 
-FLEXI_FIELD_VOTE_RESOLUTION_N_DISPLAY="Resolution and custom display"
-FLEXI_FIELD_VOTE_RESOLUTION_N_DISPLAY_DESC="Define voting resultion (e.g. half star), number of stars, custom image, custom average label, etc"
-
-FLEXI_FIELD_VOTE_AVERAGE_RATING="Average rating"
-FLEXI_FIELD_VOTE_AVERAGE_RATING_DESC="Customize the display of average rating <br/><br/>NOTE: this is also used with composite voting ON or OFF"
-FLEXI_FIELD_VOTE_AVERAGE_RATING="Average rating"
-FLEXI_FIELD_VOTE_AVERAGE_RATING_DESC="Customize the display of average rating <br/><br/>NOTE: this is also used with composite voting ON or OFF"
-FLEXI_FIELD_VOTE_AVERAGE_RATING_LABEL="Label"
-FLEXI_FIELD_VOTE_AVERAGE_RATING_LABEL_DESC="The label of average rating"
-
-FLEXI_FIELD_VOTE_COMPOSITE_VOTING="Composite voting"
-FLEXI_FIELD_VOTE_COMPOSITE_VOTING_DESC="Display custom voting characteric e.g. quality, accuracy, speed) and then automatically calculate a voting average"
-FLEXI_FIELD_VOTE_ENABLE_COMPOSITE="Enable"
-FLEXI_FIELD_VOTE_ENABLE_COMPOSITE_DESC="Turn on/off the display of partial voting characteric, like quality, performace, accuracy, etc"
-FLEXI_FIELD_VOTE_CHARACTERISTICS="Voting characteristics"
-FLEXI_FIELD_VOTE_CHARACTERISTICS_DESC="Here you can define the voting characteristics like e.g. Quality, Speed, Accuracy, etc ... <b>Write like</b>:<br/> 1##Quality##Desciption%% 2##Speed##Desciption%% 3##Accuracy##Desciption%% 4##Appearance##Desciption%% ... <br/><b>NOTE 1</b>:<br/> The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
-FLEXI_FIELD_VOTE_CHARACTERISTIC="Voting characteristic"
-FLEXI_FIELD_VOTE_CHARACTERISTIC_DESC="Configuration used for each voting characteristics"
-
 FLEXI_FIELD_FIELDLABEL_DESC="Field label is displayed in <br/><br/><b>(a)</b> item edit form <br/><br/><b>(b)</b> optionally when displaying the field value in the frontend"
 FLEXI_FIELD_FIELDNAME_DESC="Field name is used in custom item/category/etc template layouts to refer to the field"
 FLEXI_FIELD_PUBLISHED_DESC="Published Fields will be <br/><br/><b>(a)</b> displayed in --item edit form-- (if assigned to the content type of the item) <br/><br/><b>(b)</b> available for being displayed in the frontend item/category/etc views"
@@ -3306,3 +3287,28 @@ FLEXI_EXPERIMENTAL_DESC="Experimental features are only for testing, and getting
 FLEXI_REDIRECT_ARTICLE_VIEW="Joomla article view"
 FLEXI_REDIRECT_ARTICLE_VIEW_DESC="By default joomla article view will be redirected to FLEXIcontent item view. <br/><br/>If redirection is disabled, then it will allow the item to be viewed by both the Joomla article view and the FLEXIcontent item view, thus e.g. article links in Joomla category view will not be redirected <br/><br/>  NOTE: (compatibility) this is by default allowed for 'article' Content <b>type</b>, but you can allow other types too"
 FLEXI_REDIRECT_TO_ITEM_VIEW="Redirect to FC item view"
+
+; v3.0 Composite voting
+FLEXI_FIELD_VOTE_RESOLUTION_N_DISPLAY="Resolution and custom display"
+FLEXI_FIELD_VOTE_RESOLUTION_N_DISPLAY_DESC="Define voting resultion (e.g. half star), number of stars, custom image, custom average label, etc"
+
+FLEXI_FIELD_VOTE_AVERAGE_RATING="Average rating"
+FLEXI_FIELD_VOTE_AVERAGE_RATING_DESC="Customize the display of average rating <br/><br/>NOTE: this is also used with composite voting ON or OFF"
+FLEXI_FIELD_VOTE_AVERAGE_RATING="Average rating"
+FLEXI_FIELD_VOTE_AVERAGE_RATING_DESC="Customize the display of average rating <br/><br/>NOTE: this is also used with composite voting ON or OFF"
+FLEXI_FIELD_VOTE_AVERAGE_RATING_LABEL="Label"
+FLEXI_FIELD_VOTE_AVERAGE_RATING_LABEL_DESC="The label of average rating"
+
+FLEXI_FIELD_VOTE_COMPOSITE_VOTING="Composite voting"
+FLEXI_FIELD_VOTE_COMPOSITE_VOTING_DESC="Display custom voting characteric e.g. quality, accuracy, speed) and then automatically calculate a voting average"
+FLEXI_FIELD_VOTE_ENABLE_COMPOSITE="Enable"
+FLEXI_FIELD_VOTE_ENABLE_COMPOSITE_DESC="Turn on/off the display of partial voting characteric, like quality, performace, accuracy, etc"
+FLEXI_FIELD_VOTE_CHARACTERISTICS="Voting characteristics"
+FLEXI_FIELD_VOTE_CHARACTERISTICS_DESC="Here you can define the voting characteristics like e.g. Quality, Speed, Accuracy, etc ... <b>Write like</b>:<br/> 1##Quality##Desciption%% 2##Speed##Desciption%% 3##Accuracy##Desciption%% 4##Appearance##Desciption%% ... <br/><b>NOTE 1</b>:<br/> The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
+FLEXI_FIELD_VOTE_CHARACTERISTIC="Voting characteristic"
+FLEXI_FIELD_VOTE_CHARACTERISTIC_DESC="Configuration used for each voting characteristics"
+
+FLEXI_FIELD_VOTE_SHOW_COUNTER_LABEL="Show counter label"
+FLEXI_FIELD_VOTE_SHOW_COUNTER_LABEL_DESC="This will add a 'votes' label after the voting counter"
+FLEXI_FIELD_VOTE_SHOW_PERCENTAGE="Show percentage"
+FLEXI_FIELD_VOTE_SHOW_PERCENTAGE_DESC="This will display the percentage rating next to each rating label"
