# Minor fixes for composite voting feature, fixed non-empty default values of parameters in type configuration, some JS changes to hide the voting counter when empty

--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -511,5 +511,5 @@ FLEXI_VOTE_YOUR_OLD_AVERAGE_RATING_WAS_UPDATED="Your old average rating was upda
 FLEXI_VOTE_YOUR_AVERAGE_RATING_STORED="Your average rating was stored"
 FLEXI_VOTE_AVERAGE_RATING_UPDATED="Updated"
 FLEXI_VOTE_AVERAGE_RATING_SUBMITTED="Submitted"
-FLEXI_VOTE_AVERAGE_RATING_CALCULATED_AUTOMATICALLY="Voting average will be calculated out of the voting characteristics, please complete them ALL"
+FLEXI_VOTE_AVERAGE_RATING_CALCULATED_AUTOMATICALLY="Voting average is calculated out of the voting characteristics, after ALL of them have been submitted"
 FLEXI_VOTE_COMPOSITE_VOTING_IS_DISABLED="Composite voting characteristics are disabled"
