+ Added ability to the 'multilist' element (form field parameter) for applying preconfigured sets of values to specific parameters optionally making them readonly too. First example is 3 case of rating image and their dimensions for the voting field. Setting back to 'custom' allows the loaded values to be edited

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3190,6 +3190,7 @@ FLEXI_ALLOWED="Allowed"
 FLEXI_REDIRECTED="Redirected"
 FLEXI_ON_LEFT="On Left"
 FLEXI_ON_RIGHT="On Right"
+FLEXI_CUSTOM="Custom"
 
 FLEXI_BASIC_DISPLAY="Basic Display"
 FLEXI_INFORMATION="Information"
