--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.sys.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.sys.ini
@@ -6,5 +6,5 @@
 
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_FLEXICONTENT_NAME="FLEXIcontent - Universal Content"
+MOD_FLEXICONTENT="FLEXIcontent - Universal Content"
 MOD_FLEXICONTENT_XML_DESCRIPTION="Content listings and more, in a module position"
