--- a/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.sys.ini
+++ b/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.sys.ini
@@ -6,5 +6,5 @@
 
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_FLEXIFILTER_NAME="FLEXIcontent - Content Lists Filtering"
+MOD_FLEXIFILTER="FLEXIcontent - Content Lists Filtering"
 MOD_FLEXIFILTER_XML_DESCRIPTION="This module displays a form that filters the item listing of category-based views (category, author, tags, etc)"
