--- a/modules/mod_flexitagcloud/languages/en-GB.mod_flexitagcloud.sys.ini
+++ b/modules/mod_flexitagcloud/languages/en-GB.mod_flexitagcloud.sys.ini
@@ -6,5 +6,5 @@
 
 ; Note : All ini files need to be saved as UTF-8
 
-MOD_FLEXITAGSCLOUD_NAME="FLEXIcontent - Tags Cloud"
+MOD_FLEXITAGSCLOUD="FLEXIcontent - Tags Cloud"
 MOD_FLEXITAGSCLOUD_XML_DESCRIPTION="Tags Cloud Module for FLEXIcontent"
