^ Improved preset configuration field to be able to handle select and radio and select fields, and also to optionally auto-revert to custom setting after loading the preset configurations. Made use of this in loading an example of composite voting in voting field

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3191,6 +3191,8 @@ FLEXI_REDIRECTED="Redirected"
 FLEXI_ON_LEFT="On Left"
 FLEXI_ON_RIGHT="On Right"
 FLEXI_CUSTOM="Custom"
+FLEXI_CUSTOMIZE="Customize"
+FLEXI_LOAD_EXAMPLE="Load example"
 
 FLEXI_BASIC_DISPLAY="Basic Display"
 FLEXI_INFORMATION="Information"
@@ -3313,3 +3315,7 @@ FLEXI_FIELD_VOTE_SHOW_COUNTER_LABEL="Show counter label"
 FLEXI_FIELD_VOTE_SHOW_COUNTER_LABEL_DESC="This will add a 'votes' label after the voting counter"
 FLEXI_FIELD_VOTE_SHOW_PERCENTAGE="Show percentage"
 FLEXI_FIELD_VOTE_SHOW_PERCENTAGE_DESC="This will display the percentage rating next to each rating label"
+
+;v3.0 
+FLEXI_PRESET_CONFIGURATIONS="Preset configurations"
+FLEXI_PRESET_CONFIGURATIONS_DESC="This is a list of preset configurations, after loading them, you can click custom again to customize them"
