# Fixed custom fields columns being empty or wrong value in backend items manager

--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -513,3 +513,9 @@ FLEXI_VOTE_AVERAGE_RATING_UPDATED="Updated"
 FLEXI_VOTE_AVERAGE_RATING_SUBMITTED="Submitted"
 FLEXI_VOTE_AVERAGE_RATING_CALCULATED_AUTOMATICALLY="Voting average is calculated out of the voting characteristics, after ALL of them have been submitted"
 FLEXI_VOTE_COMPOSITE_VOTING_IS_DISABLED="Composite voting characteristics are disabled"
+
+FLEXI_VOTE_REVIEW_THIS_ITEM="Review this item"
+FLEXI_VOTE_REVIEW_TITLE="A short title"
+FLEXI_VOTE_REVIEW_EMAIL="Your email"
+FLEXI_VOTE_REVIEW_TEXT="The text of your review"
+FLEXI_VOTE_REVIEW_SUMBIT="Submit"
