+ Added modal layout editing to item and category forms, fixing categories manager to always calcualte inherited category and to properly consider if parent category heritage is enabled

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3319,3 +3319,6 @@ FLEXI_FIELD_VOTE_SHOW_PERCENTAGE_DESC="This will display the percentage rating n
 ;v3.0 
 FLEXI_PRESET_CONFIGURATIONS="Preset configurations"
 FLEXI_PRESET_CONFIGURATIONS_DESC="This is a list of preset configurations, after loading them, you can click custom again to customize them"
+
+FLEXI_FIELD_DISPLAY_AS="Display as"
+FLEXI_FIELD_DISPLAY_AS_DESC="You may use alternative displays e.g. to save space making form more compact"
