# Revised Javascript and PHP heper rendering function of item state toggler button, improving performance of it, now maximum number of state toggler in items manager will be 500 instead of 30

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1985,8 +1985,8 @@ FLEXI_TRASHED_STATE="Trashed"
 FLEXI_TRASHED_TO_BE_DELETED="In Trash, to be deleted"
 FLEXI_TRASH_THIS_ITEM="Set state as : trashed"
 
-FLEXI_CLICK_TO_CHANGE_STATE="<small>- CLICK to change state of the item</small>"
-FLEXI_STATE_CHANGER_DISABLED="<small>- Popup State Changer Disabled (e.g too many items listed per page)</small>"
+FLEXI_CLICK_TO_CHANGE_STATE="- CLICK to change state of the item"
+FLEXI_STATE_CHANGER_DISABLED="- Popup State Changer Disabled (e.g too many items listed per page)"
 
 FLEXI_TRASHED="Trashed :: Unpublished"
 FLEXI_UNKNOWN="Unknown :: unpublished"
