^ Converted FLEXIcontent translations groups to Joomla language associations. Also now untranslatable fields will be editable inside an associated translation. TODO: in item form the association selectors are not filtering according to language, user needs to set language filter manually. J2.5 support stopped, installation script will give out warning and fail

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -40,7 +40,7 @@ FLEXI_DISPLAY_ENTRY_IN_FRONTEND_DESC="Click to display this entry in frontend, i
 FLEXI_DISPLAY_RSS_IN_FRONTEND_DESC="Click to display the RSS listing of this entry in frontend, inside a new browser window"
 
 ; Items screen
-FLEXI_ASSOCIATONS="Associations"
+FLEXI_ASSOCIATIONS="Associations"
 FLEXI_ASSIGNMENTS="Assignments"
 FLEXI_ACCESS="Access"
 FLEXI_APPROVAL_REQUEST="Approval request"
@@ -1830,9 +1830,6 @@ FLEXI_JOOMLA_FEATURED_VIEW="Joomla Featured View"
 
 FLEXI_ORIGINAL_CONTENT_ITEM="Original content being translated"
 FLEXI_ORIGINAL_CONTENT_ITEM_DESC="Select the original content having <b>site's default content language</b>, which is being translated by current item in a different language. <br/><br/><b>NOTE:</b><br/>Content items that translate the same original content <b>form a translation group</b>, and are automatically switched when the frontend user chooses a different current language"
-FLEXI_ORIGINAL_CONTENT_ITEM2_DESC="This content is in the <b>site's default content language</b>"
-FLEXI_ORIGINAL_TRANSLATION_CONTENT="Current content item is the Original Content of the Translation Group"
-FLEXI_ORIGINAL_CONTENT_ALL_LANGS="Current content item is content for ALL languages"
 
 FLEXI_TRANSLATE_ITEM="Translate Item(s)"
 FLEXI_DUPLICATEORIGINAL="Duplicate Original content"
@@ -1858,9 +1855,9 @@ FLEXI_FIELD_FIELDTYPE_DESC="Field type can be changed on the fly and the type sp
 FLEXI_FIELD_ORDER_DESC="Field's general order<br/><br/> <b>IMPORTANT NOTE:</b> The order in the item edit form is defined per content type.<br/><br/> <b>NOTE:</b> To order fields in the item edit form,<br/>(a) go to fields manager,<br/>(b) select to filter fields by content type, <br/>(c) then order the fields assigned the current content type"
 FLEXI_FIELD_DESCRIPTION_DESC="Write a description that will appear when the item is displayed in the item edit form"
 
-FLEXI_FIELD_UNTRANSLATABLE="Untranslatable"
-FLEXI_FIELD_UNTRANSLATABLE_DESC="Declaring a Field as untranslatable (used when translation groups parameter is enabled), will result in<br/><br/><b>(a)</b> the item edit form will display value selection only in items that have the site default language, and<br/><br/><b>(b)</b> the field will show the same value (as original content item) in all items of the translation group"
-FLEXI_FIELD_VALUE_IS_UNTRANSLATABLE="Field value from original content item will be used"
+FLEXI_FIELD_NON_TRANSLATABLE="Non-translatable"
+FLEXI_FIELD_NON_TRANSLATABLE_DESC="Declaring a Field as non-translatable will make all content translations (language associations) to use the same field value"
+FLEXI_FIELD_VALUE_IS_NON_TRANSLATABLE="Field value is shared among translations (language associations) of this content"
 
 FLEXI_EXTRA_FIELDS_DESC="Extra fields that you wish to display for this view. For performance reasons, only enter the fields you require for this particular view !!!"
 FLEXI_EXTRA_FIELDS="Extra fields"
@@ -1874,9 +1871,6 @@ FLEXI_IMAGE_DESC="Parameters for creating the displayed image"
 FLEXI_TYPE_NOT_DEFINED="Type not defined"
 FLEXI_YES_FORCE_READ_MORE="Yes, Force Read More"
 FLEXI_SHOW_UNAUTHORIZED_LINKS_DESC="Content items not authorized to be viewable by current guest or logged user will be included in the content lists (category/favorites/tags/etc lists).<br/><br/>When a user tries to access the detailed view of any authorized content, then non-logged users will be asked to log-in, and already logged users will receive a HTTP 403 Access Forbidden Errors.<br/><br/><b>NOTE:</b> If you enable this feature then you should also set into the parameter 'Unauthorized Page' with the URL of the page to be displayed for these errors"
-
-FLEXI_ORIGINAL_CONTENT_IGNORED_IF_DEFAULT_LANG="<b>NOTE:</b> Original Content Item will be ignored if you set this item's language as either site's default content language or 'all'"
-FLEXI_ORIGINAL_CONTENT_ALREADY_SET="Original Content Item is already set and cannot be changed, if you need to change this then please contact site's administrator"
 
 FLEXI_DISPLAY_STATS_INFO="Display performance statitstics"
 FLEXI_DISPLAY_STATS_INFO_DESC="Display performance statistics and other execution information"
@@ -3322,3 +3316,9 @@ FLEXI_PRESET_CONFIGURATIONS_DESC="This is a list of preset configurations, after
 
 FLEXI_FIELD_DISPLAY_AS="Display as"
 FLEXI_FIELD_DISPLAY_AS_DESC="You may use alternative displays e.g. to save space making form more compact"
+
+FLEXI_ERROR_ALL_LANGUAGE_ASSOCIATED="An item set to All languages can't be associated. Associations have not been set."
+
+FLEXI_FORM_NEW="New"
+FLEXI_FORM_EDIT="Edit"
+FLEXI_FORM_SELECT="Select"
