--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -66,7 +66,7 @@ FLEXI_NEW_ITEM="New item notification"
 FLEXI_ON_NEW_ITEM="A new item was created, please review it and publish it on the website."
 FLEXI_NOTES="Note"
 FLEXI_SAVE="Save"
-FLEXI_SELECT_CATEGORY="Select categories"
+FLEXI_SELECT_CATEGORY="Select category"
 FLEXI_TAGS="Tags"
 FLEXI_TITLE="Title"
 
