# A fix for the language associations in search view, removed forgotten test message in item model, improved frontend view caching to create different cache for mobile devices. Improved date scope of Universal module making it more readable

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -80,9 +80,9 @@ FLEXI_RESET="Reset"
 FLEXI_CLEAR="Clear"
 FLEXI_SEARCH="Search"
 FLEXI_SEARCH_TEXT_INSIDE="Search text inside"
-FLEXI_SET_ITEM_IN_PROGRESS="Set state as : in progress"
-FLEXI_SET_ITEM_PENDING="Set state as : waiting for approval"
-FLEXI_SET_ITEM_TO_WRITE="Set state as : draft"
+FLEXI_SET_STATE_AS_IN_PROGRESS="Set state as : in progress (published)"
+FLEXI_SET_STATE_AS_PENDING="Set state as : waiting for approval (unpublished)"
+FLEXI_SET_STATE_AS_TO_WRITE="Set state as : draft (unpublished)"
 FLEXI_START="Start"
 FLEXI_STATE="Status"
 FLEXI_TO_WRITE_DESC="Draft"
