--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -129,18 +129,16 @@ FLEXI_SELECT_TAGS="Select tags"
 FLEXI_SELECT_TAGS_DESC="Limit displayed items to those having (or not) the specified tags"
 
 FLEXI_DATES_SCOPE="Date scope"
-FLEXI_BDATE="From (date)"
-
-;Trad?
-FLEXI_BDATE_DESC="If you selected the static behaviour, choose the start date in MySQL format (YYYY-MM-DD). If you selected the custom offset behaviour enter the start offset : Use 'd' for days, 'm' for months and 'Y' for years. eg: -5 d (minus 5 days)"
+FLEXI_UMOD_BDATE_FROM="From"
+FLEXI_UMOD_BDATE_FROM_DESC="If you selected the static behaviour, choose the start date in MySQL format (YYYY-MM-DD). If you selected the custom offset behaviour enter the start offset : Use 'd' for days, 'm' for months and 'Y' for years. eg: -5 d (minus 5 days)"
+FLEXI_UMOD_EDATE_TO="To"
+FLEXI_UMOD_EDATE_TO_DESC="If you selected the static behaviour, choose the end date in MySQL format (YYYY-MM-DD). If you selected the custom offset behaviour enter the end offset : Use 'd' for days, 'm' for months and 'Y' for years. eg: 3 d (plus 3 days)"
 
 FLEXI_DATE_CREATED="Created"
 FLEXI_DATE_MODIFIED="Modified"
 FLEXI_DATE_PUBLISH_UP="Publish Up"
 FLEXI_DATE_DATA="Date DATA <br><small>to use in comparison</small>"
 FLEXI_DATE_DATA_DESC="The listed items items will be compared used these date DATA. <br><br><b>NOTE</b>: These are used in both static behaviour and dynamic behaviours"
-FLEXI_EDATE="To (date)"
-FLEXI_EDATE_DESC="If you selected the static behaviour, choose the end date in MySQL format (YYYY-MM-DD). If you selected the custom offset behaviour enter the end offset : Use 'd' for days, 'm' for months and 'Y' for years. eg: 3 d (plus 3 days)"
 
 FLEXI_NULL_EMPTY_DATES="Null / empty dates"
 FLEXI_NULL_EMPTY_DATES_DESC="Select to include/exclude date values that are empty or NULL"
@@ -162,11 +160,11 @@ FLEXI_M3D_P4D_OF_MONTH="[-3,+4] days of month"
 FLEXI_SAME_WEEK_OF_MONTH="Same week of month (1, 4)"
 FLEXI_SAME_WEEK_OF_YEAR="Same week of year (1-53)"
 FLEXI_SAME_MONTH_OF_YEAR="Same month of year (1-12)"
-FLEXI_COMPARE_DATE_DATA_WITH="Compare with"
-FLEXI_COMPARE_DATE_DATA_WITH_DESC="Choose if you wish to compare date DATA either with (a) current server time or (b) with date of currently viewed item"
+FLEXI_UMOD_COMPARE_DATE_DATA_WITH_DYNAMIC_DATE="Compare with DYNAMIC date"
+FLEXI_UMOD_COMPARE_DATE_DATA_WITH_DYNAMIC_DATE_DESC="Choose if you wish to compare date dynamic date DATA either with (a) current server time or (b) with date of currently viewed item"
 FLEXI_DATE_NOW="Server date"
 FLEXI_DATE_ITEM="Item date"
-FLEXI_DATE_OFFSET="Custom offset (added to Date DATA)"
+FLEXI_UMOD_DATE_OFFSET_OF_COMPARE_WITH="FROM/TO custom offset (alters 'Compare with DYNAMIC date')"
 
 FLEXI_BOTH="Both"
 FLEXI_CHILDREN="Children categories"
@@ -376,7 +374,7 @@ FLEXI_TREAT_XDATE_AS_DESC="Select to enter below:<br>(a) <b>Date string:</b>  <b
 FLEXI_SPECIFIC_DATE="Specific date"
 FLEXI_SQL_DATE_EXPRESSION="SQL date Expression"
 FLEXI_STATIC_DO_NOT_COMPARE_CURRENT_ITEM="Static: use above, ignore currently viewed item"
-FLEXI_STATIC_USE_SPECIFIC_DATES="Static: specific dates / date expressions"
+FLEXI_UMOD_STATIC_USE_SPECIFIC_DATES="Static: Specific FROM/TO dates or date expressions"
 FLEXI_BEHAVIOUR_STATIC_DYNAMIC="Behaviour (**)"
 FLEXI_BEHAVIOUR_STATIC_DYNAMIC_DESC="<br><u>Static behaviour</u>: <b>ignores currently viewed item</b> and uses above parameters to <b>displays data in all views</b>. <br><br><u>Dynamic behaviour</u>: compares items to <b>currently viewed item</b> and thus it <b>displays data in item views only</b>, it may or may not use above data, e.g. date SCOPE uses them</small>"
 FLEXI_BEHAVIOUR_STATIC_DYNAMIC_DATE="Behaviour (***) <br><small>Please read</small>"
