--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -315,9 +315,9 @@ FLEXI_ACTION="Action"
 
 FLEXI_PUBLISH_THIS_ITEM="Set state as : published"
 FLEXI_UNPUBLISH_THIS_ITEM="Set state as : unpublished"
-FLEXI_SET_ITEM_IN_PROGRESS="Set state as : in progress"
-FLEXI_SET_ITEM_PENDING="Set state as : waiting for approval"
-FLEXI_SET_ITEM_TO_WRITE="Set state as : draft"
+FLEXI_SET_STATE_AS_IN_PROGRESS="Set state as : in progress (published)"
+FLEXI_SET_STATE_AS_PENDING="Set state as : waiting for approval (unpublished)"
+FLEXI_SET_STATE_AS_TO_WRITE="Set state as : draft (unpublished)"
 
 FLEXI_ARCHIVE_THIS_ITEM="Set state as : archived"
 FLEXI_TRASH_THIS_ITEM="Set state as : trashed"
