^ Improved search view and search module layout of text input search and buttons, fixed word autocomplete to be applied to both inputs of search view form and search module form when both of them are present in the same page

--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -227,7 +227,8 @@ FLEXI_SEARCH_CONTENT_TYPE_TIP="Select content types to be included in your searc
 FLEXI_SEARCH_SEARCHWORDS_IN_FIELDS="in Fields"
 FLEXI_SEARCH_SEARCHWORDS_IN_FIELDS_TIP="Select fields included in Text Search"
 
-FLEXI_SEARCH_ADVANCED_OPTIONS="Advanced Options"
+FLEXI_SEARCH_ADVANCED="Advanced"
+FLEXI_SEARCH_ADVANCED_OPTIONS="Advanced search options"
 FLEXI_SEARCH_ADVANCED_OPTIONS_TIP="Click to display/hide Advanced Search Options"
 FLEXI_SEARCH_ADVANCED_SEARCH_OPTIONS="Advanced Search Options"
 FLEXI_SEARCH_MISSING_FIELD_DESCR="Field Description is missing."
