--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -375,6 +375,7 @@ FLEXI_IMAGES="image(s)"
 FLEXI_YOUR_ACCOUNT_CANNOT_UPLOAD="Your account does not have privelege to upload new files"
 FLEXI_USAGE_IN="Usage in"
 FLEXI_REAL_PATH="Real path"
+FLEXI_FILES_MBS="Files (MBs)"
 
 FLEXI_FILEMAN_LIST="File list"
 FLEXI_FILEMAN_INFO="Info"
