# Fixed new feature of search index that allows indexing small / common words. Also some minor JS and CSS cleanups, replacing almost all remaining mootools code in frontend JS files

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -3107,7 +3107,7 @@ FLEXI_CSV_FIELD_ENCLOSE_CHAR="Field Encloser Character"
 FLEXI_CSV_FIELD_ENCLOSE_CHAR_DESC="Use only if your data have one, e.g for double quote enter: &quot;"
 FLEXI_CSV_ITEM_SEPARATOR="Item Separator"
 FLEXI_CSV_ITEM_SEPARATOR_DESC="Multiple characters recommended e.g : &#92;n~~ &nbsp; for new line enter: &#92;n"
-FLEXI_CSV_DISPLAY_FIELDS_OF_FIRST_RECORDS="Debug first # items<br/><small>(used only when <br/> testing CSV file format)</small>"
+FLEXI_CSV_DISPLAY_FIELDS_OF_FIRST_RECORDS="Debug first # items"
 FLEXI_CSV_DISPLAY_FIELDS_OF_FIRST_RECORDS_DESC="This will print the fields of the first # records (items). <br/><br/><b>NOTE:</b> this is used <b>only when testing the file format</b>. <br/> It is recommended to test your CSV file before trying to import."
 FLEXI_IMPORT_FOLDERS="Media / document Folders"
 
