--- a/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
+++ b/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
@@ -224,7 +224,7 @@ FLEXI_ADD_TOOLTIPS_DESC="Add the mootools tooltips behavior from Joomla to displ
 
 
 ; Frontend
-FLEXI_RELOADING_PLEASE_WAIT="Reloading, please wait ...<br/>"
+FLEXI_RELOADING_PLEASE_WAIT="Reloading, please wait ..."
 FLEXI_SELECT_CAT="Select Category"
 FLEXI_FILTER_CATEGORY="Category"
 FLEXI_FILTER_CATEGORIES="Categories"
